--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
+  #Google Sign in
+  firebase_auth: ^0.18.4+1
+  flutter_signin_button: ^1.0.0
+  firebase_core: ^0.5.3
+  google_sign_in: ^4.5.9
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +66,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - images/start.jpg
+    - images/login.jpg
+    - images/welcome.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
